--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Awesome Products</h1>
+  <h1>Product Hunt Clone</h1>
 
   <% @products.each do |product| %>
     <div class="card-product mb-3">
